@@ -1,5 +1,6 @@
 2011-01-20  Tolleiv Nietsch  <typo3@tolleiv.de>
 
+	* Fixed bug #17106: sys_workspace table should be defined at one place only
 	* Fixed bug #17104: "Create new workspace projects" in be_users/be_groups not required anymore
 
 2011-01-20  Francois Suter  <francois.suter@typo3.org>
